@@ -1,0 +1,37 @@
+////
+This file is generated! See scripts/docs_collector.py
+////
+
+[[metricbeat-module-memcached]]
+== memcached Module
+
+This is the memcached Module. These metricsets were tested with memcached version 1.4.35.
+
+
+
+[float]
+=== Example Configuration
+
+The memcached module supports the standard configuration options that are described
+in <<configuration-metricbeat>>. Here is an example configuration:
+
+[source,yaml]
+----
+metricbeat.modules:
+- module: memcached
+  metricsets: ["stats"]
+  enabled: true
+  period: 10s
+  hosts: ["localhost:11211"]
+
+----
+
+[float]
+=== Metricsets
+
+The following metricsets are available:
+
+* <<metricbeat-metricset-memcached-stats,stats>>
+
+include::memcached/stats.asciidoc[]
+
