@@ -1,0 +1,6 @@
+- module: memcached
+  metricsets: ["stats"]
+  enabled: true
+  period: 10s
+  hosts: ["localhost:11211"]
+
