@@ -1,0 +1,2 @@
+MEMCACHED_HOST=memcached
+MEMCACHED_PORT=11211
