@@ -1,0 +1,4 @@
+/*
+Package memcached is a Metricbeat module that contains MetricSets.
+*/
+package memcached
