@@ -1,0 +1,3 @@
+=== memcached stats MetricSet
+
+This is the stats metricset of the module memcached.
